(library
  (name ppx_jsobject_conv_pt)
  (public_name ppx_jsobject_conv.pt)
  (kind ppx_deriver)
  (ppx_runtime_libraries ppx_jsobject_conv.runtime)
  (flags :standard -safe-string)
  (libraries ppxlib fmt)
  (preprocess (pps ppxlib.metaquot)))

(rule
 (target pt_ppx_jsobject_conv.ml)
 (deps
   (:src pt_ppx_jsobject_conv.orig.ml)
   )
 (action
 (with-stdout-to %{target}
  (run not-ocamlfind preprocess -package fmt,unix,camlp5,ounit2,pa_ppx.utils,camlp5.pr_dump -package pa_ppx.deriving_plugins.std,pa_ppx_parsetree.quotations,pa_ppx_quotation2extension -syntax camlp5o  %{src})
  )))
